WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95818
Fix the uses of String::operator+=() for Mac
https://bugs.webkit.org/show_bug.cgi?id=95818
Summary
Fix the uses of String::operator+=() for Mac
Benjamin Poulain
Reported
2012-09-04 22:09:29 PDT
Fix the uses of String::operator+=() for Mac
Attachments
Patch
(8.72 KB, patch)
2012-09-04 22:55 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-09-04 22:55:28 PDT
Created
attachment 162163
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-05 04:07:07 PDT
Comment on
attachment 162163
[details]
Patch Clearing flags on attachment: 162163 Committed
r127574
: <
http://trac.webkit.org/changeset/127574
>
WebKit Review Bot
Comment 3
2012-09-05 04:07:10 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4
2012-09-05 08:14:36 PDT
Comment on
attachment 162163
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162163&action=review
> Source/JavaScriptCore/parser/Parser.h:794 > NEVER_INLINE void updateErrorWithNameAndMessage(const char* beforeMsg, String name, const char* afterMsg)
Surprised to see String here rather than const String&.
Benjamin Poulain
Comment 5
2012-09-05 10:28:23 PDT
> Surprised to see String here rather than const String&.
I did not even notice. It is bizarre indeed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug