Fix the uses of String::operator+=() for Mac https://bugs.webkit.org/show_bug.cgi?id=95818

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-09-05
Reviewed by Dan Bernstein.

Source/JavaScriptCore:

* jsc.cpp:
(functionJSCStack): Use StringBuilder to create the stack dump, it is faster
and avoid String::operator+=().

* parser/Parser.h:
(JSC::Parser::updateErrorMessageSpecialCase):
(JSC::Parser::updateErrorMessage):
(JSC::Parser::updateErrorWithNameAndMessage):
Use the String operators (and makeString) to concatenate the strings.

Source/WebCore:

* bindings/js/JSCSSStyleDeclarationCustom.cpp:
(WebCore::JSCSSStyleDeclaration::putDelegate):
This is a legitimate use of String::append(), it is the only
concatenation in this function.

* loader/appcache/ManifestParser.cpp:
(WebCore::parseManifest): Ditto.

Canonical link: https://commits.webkit.org/113709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127574 268f45cc-cd09-0410-ab3c-d52691b4dbfc